Add Google Colab demo

--- a/iPERCore_demo.ipynb
+++ b/iPERCore_demo.ipynb
@@ -60,11 +60,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "F_bcY1Adayeh",
-        "outputId": "6fb31a3b-a5a0-4312-cbef-06fe63497e36"
+        "id": "F_bcY1Adayeh"
       },
       "outputs": [],
       "source": [
@@ -84,18 +80,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lG-soU1wavvA",
-        "outputId": "0149495e-8326-4dc8-bb0a-74d67f73ada0"
+        "id": "lG-soU1wavvA"
       },
       "outputs": [],
       "source": [
-        "# Install ffmpeg (ffprobe)\n",
-        "!apt-get install ffmpeg\n",
-        "\n",
-        "!pip install yt-dlp moviepy"
+        "!pip install moviepy==0.2.3.5 imageio==2.4.1\n",
+        "!pip install yt-dlp"
       ]
     },
     {
@@ -142,18 +132,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oytRV4rDa_6W",
-        "outputId": "bac418ed-9d7b-4bf1-ebca-075e7f09288c"
+        "id": "oytRV4rDa_6W"
       },
       "outputs": [],
       "source": [
         "!ls /usr/local/ | grep cuda\n",
         "\n",
-        "# CUDA_HOMEにcuda-10.1のパスを設定\n",
-        "os.environ[\"CUDA_HOME\"] = \"/usr/local/cuda-10.1\"\n",
+        "# CUDA_HOMEにcuda-11のパスを設定\n",
+        "os.environ[\"CUDA_HOME\"] = \"/usr/local/cuda-11\"\n",
         "\n",
         "!echo $CUDA_HOME"
       ]
@@ -180,15 +166,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4BSjUmwIbx9y",
-        "outputId": "9ffd69b3-d90d-4d48-e4cf-dbdc7cbde28a"
+        "id": "4BSjUmwIbx9y"
       },
       "outputs": [],
       "source": [
-        "!git clone https://github.com/iPERDance/iPERCore.git"
+        "!git clone https://github.com/iPERDance/iPERCore.git\n",
+        "\n",
+        "# Commits on Oct 31, 2022\n",
+        "%cd /content/iPERCore\n",
+        "!git checkout 61f7e086316d7f64779be75d3a771da4e1e4d441"
       ]
     },
     {
@@ -204,15 +190,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T6_AnjRab-0u",
-        "outputId": "37b25d86-6684-4dd2-8e9c-57689e878cb7"
+        "id": "T6_AnjRab-0u"
       },
       "outputs": [],
       "source": [
         "%cd /content/iPERCore/\n",
+        "\n",
+        "# cuda11.2以上の場合cuda11.1の設定でセットアップ\n",
+        "!sed '158i \\tversion = version if version != 11.2 else 11.1' test.txt \n",
         "\n",
         "!python setup.py develop"
       ]
@@ -262,12 +247,12 @@
         "%cd /content/iPERCore\n",
         "\n",
         "# download samples\n",
-        "!wget -O assets/samples.zip  \"https://download.impersonator.org/iper_plus_plus_latest_samples.zip\"\n",
+        "!wget -O assets/samples.zip  \"http://101.32.75.151:10086/samples.zip\"\n",
         "!unzip -o assets/samples.zip -d  assets\n",
         "!rm assets/samples.zip\n",
         "\n",
         "# download checkpoints\n",
-        "!wget -O assets/checkpoints.zip \"http://101.32.75.151:12345/iper_plus_plus_latest_checkpoints.zip\"\n",
+        "!wget -O assets/checkpoints.zip \"http://101.32.75.151:10086/checkpoints.zip\"\n",
         "!unzip -o assets/checkpoints.zip -d assets/\n",
         "\n",
         "!rm assets/checkpoints.zip"
@@ -384,7 +369,7 @@
         "#@markdown 動画の切り抜き範囲(秒)を指定してください。\\\n",
         "#@markdown 30秒以上の場合OOM発生の可能性が高いため注意\n",
         "start_sec =  3#@param {type:\"integer\"}\n",
-        "end_sec =  30#@param {type:\"integer\"}\n",
+        "end_sec =  10#@param {type:\"integer\"}\n",
         "\n",
         "(start_pt, end_pt) = (start_sec, end_sec)\n",
         "\n",
@@ -474,7 +459,6 @@
         "MQ1_x64JccbY",
         "7SQ27jyrcjnR"
       ],
-      "name": "iPERCore_demo.ipynb",
       "provenance": []
     },
     "kernelspec": {
