Add Google Colab demo

--- a/iPERCore_demo.ipynb
+++ b/iPERCore_demo.ipynb
@@ -197,7 +197,7 @@
         "%cd /content/iPERCore/\n",
         "\n",
         "# cuda11.2以上の場合cuda11.1の設定でセットアップ\n",
-        "!sed '158i \\tversion = version if version != 11.2 else 11.1' test.txt \n",
+        "!sed -i '158i \\    version = version if version != 11.2 else 11.1' setup.py\n",
         "\n",
         "!python setup.py develop"
       ]
