Add Google Colab demo

--- a/InSPyReNet_demo.ipynb
+++ b/InSPyReNet_demo.ipynb
@@ -42,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2PcII5fLdHnJ",
-        "outputId": "7e3b7c60-5d1d-4800-b965-aabd2f6151d2"
+        "outputId": "48ae0a00-c8e0-4d4c-e53e-7942c4152133"
       },
       "outputs": [],
       "source": [
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R-Y5auuvnnnT",
-        "outputId": "63b35e34-d538-4335-b20d-e91a4add8d58"
+        "outputId": "f0422d31-6b6f-4170-fe69-44b0b87f0a3d"
       },
       "outputs": [],
       "source": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LScsvO3UppqT",
-        "outputId": "eaf1df2f-f9b5-41e1-e184-a48f48b18007"
+        "outputId": "5e9bd7fa-8dd9-4463-cced-eccd7bf38521"
       },
       "outputs": [],
       "source": [
@@ -123,7 +123,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "o2lxptJeo6kr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o2lxptJeo6kr",
+        "outputId": "c53c37f7-49ff-4fbd-a1d7-c443e12e978f"
       },
       "outputs": [],
       "source": [
@@ -156,8 +160,8 @@
         "\n",
         "#@markdown 動画の切り抜き範囲(秒)を指定してください。\\\n",
         "#@markdown 30秒以上の場合OOM発生の可能性が高いため注意\n",
-        "start_sec =  3#@param {type:\"integer\"}\n",
-        "end_sec =  8#@param {type:\"integer\"}\n",
+        "start_sec =  33#@param {type:\"integer\"}\n",
+        "end_sec =  38#@param {type:\"integer\"}\n",
         "\n",
         "(start_pt, end_pt) = (start_sec, end_sec)"
       ]
@@ -170,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LABgfHjjrbqm",
-        "outputId": "8ad808b3-2a11-4ad1-e30f-5757afb5ee3f"
+        "outputId": "5182c072-325d-4d51-8c36-61057758f1df"
       },
       "outputs": [],
       "source": [
@@ -199,10 +203,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 337
         },
         "id": "j4WSGneqvvH8",
-        "outputId": "982bb873-c6c0-4312-ec74-c2e1f8bbd7d8"
+        "outputId": "abee053a-1dc5-43fb-e9bc-02c7e26c0271"
       },
       "outputs": [],
       "source": [
@@ -229,7 +233,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1P4IdKq5XL0w",
-        "outputId": "82d0d472-6ebe-474c-d20b-290eeee31d08"
+        "outputId": "9f910ea0-dbe4-4826-ba69-dd04d89a1f8b"
       },
       "outputs": [],
       "source": [
@@ -259,7 +263,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cQguuaQpZHUR",
-        "outputId": "76fe6a37-1358-42cb-eacb-2abad5ad16c4"
+        "outputId": "6e15387b-be78-4cf5-d7d4-4c8e5d304115"
       },
       "outputs": [],
       "source": [
@@ -268,8 +272,8 @@
         "\n",
         "!wget -c https://www.pakutaso.com/shared/img/thumb/SAYAPAKU5460_TP_V4.jpg \\\n",
         "      -O ./test_files/test01.jpg\n",
-        "!wget -c https://www.pakutaso.com/shared/img/thumb/29redsugar2286_TP_V4.jpg \\\n",
-        "      -O ./test_files/background.jpg"
+        "!wget -c https://1.bp.blogspot.com/-43uWT_S2ZyM/X1CLR8paJLI/AAAAAAABa5s/T3dOIgCmOJ0yJua_QppssSDdABzmQRIkwCNcBGAsYHQ/s1600/bg_koukasen_color1.png \\\n",
+        "      -O ./test_files/background.png"
       ]
     },
     {
@@ -289,7 +293,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4bnEJRQdYk2D",
-        "outputId": "b47d65a0-2c95-4ab6-87f9-5f04f14a8661"
+        "outputId": "7a0ed771-156c-4b33-fd3e-1b7fd489c87f"
       },
       "outputs": [],
       "source": [
@@ -319,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bFwPURFJYcPa",
-        "outputId": "509ed86e-0881-4fb2-a2df-17a1ecd62350"
+        "outputId": "54d3d260-b3d4-4850-add5-db0c0fd98354"
       },
       "outputs": [],
       "source": [
@@ -345,7 +349,7 @@
           "height": 550
         },
         "id": "LgOo05ZuhJik",
-        "outputId": "88feb9cd-188e-4cc9-a7bf-e665de8ca639"
+        "outputId": "23bb0c09-9db8-4343-89ce-4c1cd3436530"
       },
       "outputs": [],
       "source": [
@@ -370,7 +374,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yw0W8PpihjVf",
-        "outputId": "a94fa999-5d9f-421d-b1b1-6e7c40bd8496"
+        "outputId": "0e9e2511-596b-4fb8-f358-e7d0aadb0679"
       },
       "outputs": [],
       "source": [
@@ -396,7 +400,7 @@
           "height": 550
         },
         "id": "YfUmVMTchm1B",
-        "outputId": "55c43223-109b-47a4-ec3c-84064df266a9"
+        "outputId": "3d009d7d-4521-464f-c3f6-cb19956b1c71"
       },
       "outputs": [],
       "source": [
@@ -421,7 +425,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IvxIXaXShsbB",
-        "outputId": "0b5184b2-1b1e-43f9-c470-f2da2d960ffb"
+        "outputId": "0b0c0129-f96f-430e-b3d1-5e69ad489294"
       },
       "outputs": [],
       "source": [
@@ -447,7 +451,7 @@
           "height": 550
         },
         "id": "RWUjOrcohvN3",
-        "outputId": "71be9da6-2500-44c1-d84e-c1150c0e1492"
+        "outputId": "4e464c30-92c7-49d0-fe68-4821db3d9920"
       },
       "outputs": [],
       "source": [
@@ -472,7 +476,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DliFKHEFhzJV",
-        "outputId": "58cbf0be-5b44-411e-9c7a-9c39ba629bb7"
+        "outputId": "63b843d5-99f8-4371-a661-5a3bec6f1a8e"
       },
       "outputs": [],
       "source": [
@@ -498,7 +502,7 @@
           "height": 550
         },
         "id": "47q5yJOZh2Wz",
-        "outputId": "54319928-9298-4bd8-9ffd-0bd054948cbd"
+        "outputId": "0090e96e-2a77-4013-efe7-c91b9d02966f"
       },
       "outputs": [],
       "source": [
@@ -523,7 +527,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nmSST3Wyh6o_",
-        "outputId": "804d7aca-eec3-401a-f807-d3e032e5f6da"
+        "outputId": "99a832ca-6df3-4d4c-f4a5-675c27a4f196"
       },
       "outputs": [],
       "source": [
@@ -549,7 +553,7 @@
           "height": 550
         },
         "id": "7k7Q-HyMiPLJ",
-        "outputId": "d21d2a6d-bb0a-4b89-a719-af4a6fb70ed5"
+        "outputId": "27cd4cd2-1f46-4a92-8b0e-25695beca342"
       },
       "outputs": [],
       "source": [
@@ -574,13 +578,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IoHt5nqPiS8P",
-        "outputId": "7e0e41d9-9974-4623-feb1-4fd8945c8ac6"
+        "outputId": "f914dfa2-0e7b-486d-aead-e54b037655a2"
       },
       "outputs": [],
       "source": [
         "%cd /content/InSPyReNet\n",
         "\n",
-        "TYPE = './test_files/background.jpg' # map, green, rgba, blur, overlay, another image file path\n",
+        "TYPE = './test_files/background.png' # map, green, rgba, blur, overlay, another image file path\n",
         "!python run/Inference.py \\\n",
         "  --config configs/InSPyReNet_SwinB.yaml \\\n",
         "  --source {SOURCE} \\\n",
@@ -600,7 +604,7 @@
           "height": 550
         },
         "id": "RiVoP51viiA2",
-        "outputId": "072ec47b-9d11-453a-deae-c2d0ad2e86cd"
+        "outputId": "70bfa440-eb16-4da8-be83-d92476ccb83d"
       },
       "outputs": [],
       "source": [
@@ -625,14 +629,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IBoDDKDMjmq-",
-        "outputId": "846f6a03-4578-45c7-bbe2-fa90add367a1"
+        "outputId": "29972939-d5e3-48f0-bd12-b32f447f64d8"
       },
       "outputs": [],
       "source": [
         "%cd /content/InSPyReNet\n",
         "\n",
         "SOURCE = './test_files/clip_video.mp4'\n",
-        "TYPE = './test_files/background.jpg' # map, green, rgba, blur, overlay, another image file path\n",
+        "TYPE = 'green' # map, green, rgba, blur, overlay, another image file path\n",
         "!python run/Inference.py \\\n",
         "  --config configs/InSPyReNet_SwinB.yaml \\\n",
         "  --source {SOURCE} \\\n",
@@ -650,7 +654,7 @@
           "height": 460
         },
         "id": "zdlkthB9kbyC",
-        "outputId": "728bf66f-6035-483d-8ead-79e414f226e1"
+        "outputId": "7cc4f6a3-1652-41a6-f1e7-3d388b2fbb45"
       },
       "outputs": [],
       "source": [
