Add Google Colab demo

--- a/MixtureDiffUser_demo.ipynb
+++ b/MixtureDiffUser_demo.ipynb
@@ -129,7 +129,8 @@
         "\n",
         "from diffusers import LMSDiscreteScheduler\n",
         "from mixdiff.tiling import (\n",
-        "    StableDiffusionTilingPipeline, \n",
+        "    StableDiffusionTilingPipeline)\n",
+        "from mixdiff.canvas import (\n",
         "    StableDiffusionCanvasPipeline, Text2ImageRegion)\n",
         "\n",
         "import torch\n",
