Add Google Colab demo

--- a/ControlNet_demo.ipynb
+++ b/ControlNet_demo.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9NENcrgDJv9q"
@@ -12,7 +13,7 @@
         "GitHub<br>\n",
         "https://github.com/lllyasviel/ControlNet<br>\n",
         "<br>\n",
-        "<a href=\"https://colab.research.google.com/github/kaz12tech/ai_demos/blob/master/ControlNet.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kaz12tech/ai_demos/blob/master/ControlNet_demo.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
