Add Google Colab demo

--- a/MTTR_demo.ipynb
+++ b/MTTR_demo.ipynb
@@ -148,7 +148,7 @@
         "end_sec =  238#@param {type:\"integer\"}\n",
         "\n",
         "#@markdown テキストクエリをカンマ区切りで入力してください。\n",
-        "text = \"guy in black performing tricks on a bike,a black bike used to perform tricks\" #@param {type:\"string\"}\n",
+        "text = \"guy in performing tricks on a bike,a black bike used to perform tricks\" #@param {type:\"string\"}\n",
         "\n",
         "(start_pt, end_pt) = (start_sec, end_sec)\n",
         "\n",
