Add Google Colab demo

--- a/EdgeYOLO_demo.ipynb
+++ b/EdgeYOLO_demo.ipynb
@@ -218,7 +218,7 @@
       "outputs": [],
       "source": [
         "WEIGHTS = './pretrained/edgeyolo_coco.pth'\n",
-        "SOURCE = './test_video/test.avi' # or dir with images, such as /dataset/coco2017/val2017 (jpg/jpeg, png, bmp, webp is available)\n",
+        "SOURCE = './test_video/test.avi'\n",
         "CONF_THRES = 0.25\n",
         "NMS_THRES = 0.5\n",
         "INPUT_SIZE = [640, 640] # height width\n",
