Add Google Colab demo

--- a/VRT_demo.ipynb
+++ b/VRT_demo.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "VRT_demo.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ulHDWbFDyOwl"
+      },
       "source": [
         "GitHub  \n",
         "https://github.com/jingyunliang/vrt  \n",
@@ -29,54 +15,55 @@
         "\n",
         "forms  \n",
         "https://colab.research.google.com/notebooks/forms.ipynb "
-      ],
-      "metadata": {
-        "id": "ulHDWbFDyOwl"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zplNiXRIyicC"
+      },
       "source": [
         "# ランタイムの設定\n",
         "「ランタイム」→「ランタイムのタイプを変更」→「ハードウェアアクセラレータ」をGPUに変更"
-      ],
-      "metadata": {
-        "id": "zplNiXRIyicC"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CUBl3avnylK6"
+      },
       "source": [
         "# 実行方法\n",
         "「ランタイム」→「すべてのセルを実行」を選択"
-      ],
-      "metadata": {
-        "id": "CUBl3avnylK6"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 環境セットアップ"
-      ],
       "metadata": {
         "id": "5wspXJ7TyxXl"
-      }
+      },
+      "source": [
+        "# 環境セットアップ"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## GitHubからCode Clone"
-      ],
       "metadata": {
         "id": "OwGl6r33y9Il"
-      }
+      },
+      "source": [
+        "## GitHubからCode Clone"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LkjoqRndyI4b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LkjoqRndyI4b",
+        "outputId": "206bb1a2-497c-4603-a722-0a922b466be2"
       },
       "outputs": [],
       "source": [
@@ -84,41 +71,60 @@
         "!rm -r VRT\n",
         "\n",
         "# GitHubからVRTのcodeをclone\n",
-        "!git clone https://github.com/JingyunLiang/VRT.git"
+        "!git clone https://github.com/JingyunLiang/VRT.git\n",
+        "\n",
+        "%cd /content/VRT\n",
+        "\n",
+        "# Commits on Oct 5, 2022\n",
+        "!git checkout 94a5f504eb84aedf1314de5389f45f4ba1c2d022"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## ライブラリのインストール"
-      ],
       "metadata": {
         "id": "TRxMEobczAuF"
-      }
+      },
+      "source": [
+        "## ライブラリのインストール"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xd9W4KXszCvs",
+        "outputId": "5db5778e-5ac9-409b-f9af-ee8b480bb70e"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/VRT\n",
-        "!pip install -r requirements.txt "
-      ],
-      "metadata": {
-        "id": "xd9W4KXszCvs"
-      },
-      "execution_count": null,
-      "outputs": []
+        "!pip install -r requirements.txt\n",
+        "!pip install moviepy==0.2.3.5 imageio==2.4.1"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# ライブラリのインポート"
-      ],
       "metadata": {
         "id": "17pFT-LtzoNh"
-      }
+      },
+      "source": [
+        "# ライブラリのインポート"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GeeG1zwbzq8l",
+        "outputId": "635a3525-b097-44a1-fc4a-b6ca27dce70a"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import glob\n",
@@ -130,15 +136,13 @@
         "\n",
         "from moviepy.editor import *\n",
         "from moviepy.video.fx.resize import resize"
-      ],
-      "metadata": {
-        "id": "GeeG1zwbzq8l"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "n630dPNZ0AN3"
+      },
       "source": [
         "# 画像または動画のセットアップ\n",
         "デモでは下記を使用  \n",
@@ -146,13 +150,20 @@
         "https://ia800502.us.archive.org/4/items/vd_is_for_everybody/vd_is_for_everybody_512kb.mp4  \n",
         "blur除去  \n",
         "https://pixabay.com/ja/videos/%E5%B8%82-%E4%BA%BA-%E6%AD%A9%E3%81%8F-%E8%B2%B7%E3%81%84%E7%89%A9-%E9%83%BD%E5%B8%82-999/  "
-      ],
-      "metadata": {
-        "id": "n630dPNZ0AN3"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "DfNtyCOR0ZiM",
+        "outputId": "951e069b-cb2f-42a4-dbe5-45ec44d086d8"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/VRT\n",
         "\n",
@@ -203,15 +214,13 @@
         "  !rm {filename}\n",
         "\n",
         "!ls testsets/uploaded"
-      ],
-      "metadata": {
-        "id": "DfNtyCOR0ZiM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "etYtU_eo0zde"
+      },
       "source": [
         "# 超解像\n",
         "\n",
@@ -242,13 +251,19 @@
         "  \n",
         "--tile_overlap:  \n",
         "タイルの重なり合うサイズ。 変更不要"
-      ],
-      "metadata": {
-        "id": "etYtU_eo0zde"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DuRyN35I4Nt9",
+        "outputId": "9a401795-c722-4544-e627-134f3e672be1"
+      },
+      "outputs": [],
       "source": [
         "#@markdown uploadかベンチマークか選択\n",
         "type = \"upload\" #@param [\"upload\", \"BT001\", \"BT002\", \"BT003\", \"BT004\", \"BT005\", \"BT006\", \"BT007\", \"BT008\"] {allow-input: false}\n",
@@ -355,24 +370,24 @@
         "    --folder_lq testsets/DAVIS-test \\\n",
         "    --folder_gt testsets/DAVIS-test \\\n",
         "    --tile 12 128 128 --tile_overlap 2 20 20\n"
-      ],
-      "metadata": {
-        "id": "DuRyN35I4Nt9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Visualization"
-      ],
       "metadata": {
         "id": "Fm1GDtiWujCD"
-      }
+      },
+      "source": [
+        "# Visualization"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dYH7OpNo8zbT"
+      },
+      "outputs": [],
       "source": [
         "def display(img1, name='input'):\n",
         "  total_figs = 5\n",
@@ -407,24 +422,24 @@
         "for path in sorted(Path('results').rglob('*.png'))[:10]:\n",
         "  img.append(cv2.cvtColor(cv2.imread(f'{path}'), cv2.COLOR_BGR2RGB))\n",
         "display(img, 'VRT output')"
-      ],
-      "metadata": {
-        "id": "dYH7OpNo8zbT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# フレーム画像を動画に変換"
-      ],
       "metadata": {
         "id": "1cyVdOuQfe47"
-      }
+      },
+      "source": [
+        "# フレーム画像を動画に変換"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GRxuCgXbfdnt"
+      },
+      "outputs": [],
       "source": [
         "result_frames = glob.glob(\"/content/VRT/results/*/*/*.png\")\n",
         "result_frame_dir = os.path.dirname(result_frames[0])\n",
@@ -437,24 +452,24 @@
         "# 表示用にリサイズ\n",
         "clip_resize = resize(clip, height=480)\n",
         "clip_resize.ipython_display()"
-      ],
-      "metadata": {
-        "id": "GRxuCgXbfdnt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# ダウンロード"
-      ],
       "metadata": {
         "id": "SxW6b4BO9DFH"
-      }
+      },
+      "source": [
+        "# ダウンロード"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "U9LsJiEA8_dA"
+      },
+      "outputs": [],
       "source": [
         "# 超解像結果をダウンロード\n",
         "zip_filename = 'VRT_result.zip'\n",
@@ -462,12 +477,22 @@
         "  os.remove(zip_filename)\n",
         "os.system(f\"zip -r -j {zip_filename} /content/VRT/results/*\")\n",
         "files.download(zip_filename)"
-      ],
-      "metadata": {
-        "id": "U9LsJiEA8_dA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
