Add python demo

--- a/wav2lip_demo.ipynb
+++ b/wav2lip_demo.ipynb
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ODkoi-eAUytb",
-        "outputId": "94bcf475-5a32-4845-a436-ed7cfc3c255b"
+        "outputId": "f21d83c5-2864-4858-db90-07d6aac2b159"
       },
       "outputs": [],
       "source": [
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWU3fFj2yaXD",
-        "outputId": "93685e0b-ed39-479a-f718-ee834c841322"
+        "outputId": "19350905-8819-4517-c94a-08fae846dcaa"
       },
       "outputs": [],
       "source": [
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6V2fa4OXqZec",
-        "outputId": "aa83b699-aa8c-46fd-8ff7-fd0ee39c51e6"
+        "outputId": "3fbb475f-3028-4d9d-d192-52bbec8107a1"
       },
       "outputs": [],
       "source": [
@@ -123,7 +123,8 @@
         "\n",
         "!pip install -r requirements.txt\n",
         "!pip install moviepy==0.2.3.5 imageio==2.4.1\n",
-        "!pip install yt-dlp"
+        "!pip install yt-dlp\n",
+        "!pip install -U librosa==0.8.1"
       ]
     },
     {
@@ -143,7 +144,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nzb7TJeWSHt3",
-        "outputId": "894dc0b5-c429-4179-af77-e7a736dcfb6a"
+        "outputId": "481dbbda-ee84-425c-c866-fa244c33c065"
       },
       "outputs": [],
       "source": [
@@ -172,7 +173,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ArpTzH10275R",
-        "outputId": "7c8f3291-d43d-458a-cce4-4a3406c39308"
+        "outputId": "9776e63d-d64d-4fa1-c116-2afe65cc77ae"
       },
       "outputs": [],
       "source": [
@@ -234,7 +235,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UZMIzthv5HyE",
-        "outputId": "93203b43-7dd0-4e45-fe26-a6e83ee2e657"
+        "outputId": "57311474-82dc-4e9b-c06e-f2182c791155"
       },
       "outputs": [],
       "source": [
@@ -261,10 +262,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 552
+          "height": 548
         },
         "id": "94HugE_R56uX",
-        "outputId": "03da2d0a-f0dd-4efe-9c01-45b519379fd3"
+        "outputId": "6c30e317-8c04-49ed-d0f6-ea8d23efc89d"
       },
       "outputs": [],
       "source": [
@@ -309,7 +310,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "09eOJ8Bh5uDO",
-        "outputId": "65aa8f43-22e5-4cb8-957f-a2ef46aeb902"
+        "outputId": "33313aec-2844-4171-e677-9e4e1d4b5171"
       },
       "outputs": [],
       "source": [
@@ -342,10 +343,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 76
+          "height": 75
         },
         "id": "6CfGqeLf6ucJ",
-        "outputId": "488f9f1a-fd51-4613-c561-5cebc8c30db0"
+        "outputId": "60f87335-e7a0-434b-98eb-09f5bd2a1e8a"
       },
       "outputs": [],
       "source": [
@@ -369,7 +370,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LgQr2hfG69Mq",
-        "outputId": "563716b0-65c9-40bf-bfc6-056dfbf28707"
+        "outputId": "08dfa742-cdf4-456e-cea0-e12f8b4c2e50"
       },
       "outputs": [],
       "source": [
@@ -387,10 +388,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 704
         },
         "id": "miIwBJXe7Ueg",
-        "outputId": "7d84894e-85e4-4387-95f3-c2a930cf2cf9"
+        "outputId": "f53e3d9b-863b-464c-f358-a4f020d70fd5"
       },
       "outputs": [],
       "source": [
