--- a/Inpaint_Anything_demo.ipynb
+++ b/Inpaint_Anything_demo.ipynb
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SO7I9ozfFpmW",
-        "outputId": "d366819d-6bdc-490b-82e1-91e2bbe8d1ea"
+        "outputId": "e8e0652c-c989-4e8f-a1bc-821261814e70"
       },
       "outputs": [],
       "source": [
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gRHm5XmrGGNB",
-        "outputId": "bc54037a-e99d-4c72-97be-0696a53d837e"
+        "outputId": "f0cff39c-6285-4b6a-c94b-146c26f92f1d"
       },
       "outputs": [],
       "source": [
@@ -86,6 +86,22 @@
         "!python -m pip install -r lama/requirements.txt\n",
         "!python -m pip install yellowbrick imbalanced-learn\n",
         "!pip install huggingface-hub"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SsFuNsOyfecp",
+        "outputId": "75b35a28-d4f3-49e8-bb09-65ece8494036"
+      },
+      "outputs": [],
+      "source": [
+        "!python -m pip install -e segment_anything\n",
+        "!python -m pip install diffusers transformers accelerate scipy safetensors"
       ]
     },
     {
@@ -104,7 +120,10 @@
         "id": "34QEYM0rp56Q"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import cv2\n",
+        "from google.colab.patches import cv2_imshow\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +142,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dLrvHPVpYR14",
-        "outputId": "35b9204e-0d92-4154-98db-0f5e071a4b21"
+        "outputId": "8556fe31-65ff-456a-8172-e6ad8c9b167c"
       },
       "outputs": [],
       "source": [
@@ -162,7 +181,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b6TNREZXmAh",
-        "outputId": "1c600b4d-b350-49b8-bb76-0d7cf69938cb"
+        "outputId": "37afa6bc-45e5-44bc-c57a-086d7135c394"
       },
       "outputs": [],
       "source": [
@@ -189,7 +208,7 @@
           "height": 227
         },
         "id": "mm-KRzF3myim",
-        "outputId": "17256f0e-bc5d-4a53-e664-08ba78b30676"
+        "outputId": "c2b8c3d3-168b-48f3-92f1-2264a92767d1"
       },
       "outputs": [],
       "source": [
@@ -214,6 +233,133 @@
         "plt.title('inpainted', fontsize=16)\n",
         "ax2.axis('off')\n",
         "ax2.imshow( Image.open(\"./results/dog/inpainted_with_mask_1.png\") )\n",
+        "\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6SaSwmhtdfpS"
+      },
+      "source": [
+        "# Fill anything"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8F6sW9hJd5GD",
+        "outputId": "67434ceb-5ed4-486a-b0d5-5ae267b8d9ed"
+      },
+      "outputs": [],
+      "source": [
+        "!wget -c https://www.pakutaso.com/shared/img/thumb/JK92_udekumu20150208091355_TP_V4.jpg \\\n",
+        "      -O ./test01.jpg"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Nk9oiq20emQf"
+      },
+      "outputs": [],
+      "source": [
+        "point_x = 375 #@param {type:\"slider\", min:0, max:800, step:1}\n",
+        "point_y = 120 #@param {type:\"slider\", min:0, max:462, step:1}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 479
+        },
+        "id": "x1HqnC0veFLA",
+        "outputId": "f0fb5c8b-a3e4-49e0-98ec-459ee1a1a639"
+      },
+      "outputs": [],
+      "source": [
+        "img = cv2.imread('./test01.jpg')\n",
+        "\n",
+        "cv2.circle(\n",
+        "    img,  \n",
+        "    (point_x, point_y), # 座標\n",
+        "    5,                  # 円の半径 \n",
+        "    (0,0,255),          # カラー\n",
+        "    -1                  # 太さ\n",
+        "    ) \n",
+        "\n",
+        "cv2_imshow(img)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rmIE25K0fpj6",
+        "outputId": "4ab0778b-0783-44aa-ebbc-60443d31850c"
+      },
+      "outputs": [],
+      "source": [
+        "%cd /content/Inpaint-Anything\n",
+        "\n",
+        "!python remove_anything.py \\\n",
+        "    --input_img ./test01.jpg \\\n",
+        "    --point_coords {point_x} {point_y} \\\n",
+        "    --point_labels 1 \\\n",
+        "    --dilate_kernel_size 15 \\\n",
+        "    --output_dir ./results \\\n",
+        "    --sam_model_type \"vit_h\" \\\n",
+        "    --sam_ckpt ./pretrained_models/sam_vit_h_4b8939.pth \\\n",
+        "    --lama_config ./lama/configs/prediction/default.yaml \\\n",
+        "    --lama_ckpt ./pretrained_models/big-lama/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "VECvUCeSkFCG",
+        "outputId": "5a894c8b-a272-4d1a-db2f-63d822103f1c"
+      },
+      "outputs": [],
+      "source": [
+        "from PIL import Image\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# show inference result\n",
+        "fig = plt.figure(figsize=(15, 10))\n",
+        "\n",
+        "# input image\n",
+        "ax1 = fig.add_subplot(1, 3, 1)\n",
+        "plt.title('original', fontsize=16)\n",
+        "ax1.axis('off')\n",
+        "ax1.imshow( Image.open(\"./test01.jpg\") )\n",
+        "\n",
+        "ax1 = fig.add_subplot(1, 3, 2)\n",
+        "plt.title('mask', fontsize=16)\n",
+        "ax1.axis('off')\n",
+        "ax1.imshow( Image.open(\"./results/test01/with_mask_2.png\") )\n",
+        "\n",
+        "ax2 = fig.add_subplot(1, 3, 3)\n",
+        "plt.title('inpainted', fontsize=16)\n",
+        "ax2.axis('off')\n",
+        "ax2.imshow( Image.open(\"./results/test01/inpainted_with_mask_2.png\") )\n",
         "\n",
         "plt.show()"
       ]
