--- a/Inpaint_Anything_demo.ipynb
+++ b/Inpaint_Anything_demo.ipynb
@@ -89,22 +89,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SsFuNsOyfecp",
-        "outputId": "75b35a28-d4f3-49e8-bb09-65ece8494036"
-      },
-      "outputs": [],
-      "source": [
-        "!python -m pip install -e segment_anything\n",
-        "!python -m pip install diffusers transformers accelerate scipy safetensors"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "L6sssZcc9CBF"
@@ -122,7 +106,10 @@
       "outputs": [],
       "source": [
         "import cv2\n",
-        "from google.colab.patches import cv2_imshow\n"
+        "from google.colab.patches import cv2_imshow\n",
+        "\n",
+        "from PIL import Image\n",
+        "import matplotlib.pyplot as plt"
       ]
     },
     {
@@ -212,9 +199,6 @@
       },
       "outputs": [],
       "source": [
-        "from PIL import Image\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "# show inference result\n",
         "fig = plt.figure(figsize=(15, 10))\n",
         "\n",
@@ -339,9 +323,6 @@
       },
       "outputs": [],
       "source": [
-        "from PIL import Image\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "# show inference result\n",
         "fig = plt.figure(figsize=(15, 10))\n",
         "\n",
