Add Google Colab demo

--- a/Inpaint_Anything_demo.ipynb
+++ b/Inpaint_Anything_demo.ipynb
@@ -222,12 +222,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6SaSwmhtdfpS"
       },
       "source": [
-        "# Fill anything"
+        "# Remove anything 2"
       ]
     },
     {
