--- a/Lama_demo.ipynb
+++ b/Lama_demo.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ze17Whr66OiC"
@@ -12,7 +13,7 @@
         "GitHub<br>\n",
         "https://github.com/saic-mdal/lama<br>\n",
         "<br>\n",
-        "<a href=\"https://colab.research.google.com/github/kaz12tech/ai_demos/blob/master/Lama_demo.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kaz12tech/ai_demos/blob/master/lama_demo.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -21,7 +22,7 @@
         "id": "GOLKpkBa6OiI"
       },
       "source": [
-        "# 環境セットアップ"
+        "# setup environment"
       ]
     },
     {
@@ -30,26 +31,46 @@
         "id": "Jz8gTEgP6OiJ"
       },
       "source": [
-        "## GitHubからソースコードを取得"
+        "## git clone"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SO7I9ozfFpmW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SO7I9ozfFpmW",
+        "outputId": "e8e0652c-c989-4e8f-a1bc-821261814e70"
       },
       "outputs": [],
       "source": [
         "%cd /content\n",
-        "!git clone https://github.com/saic-mdal/lama.git"
+        "!git clone https://github.com/saic-mdal/lama.git\n",
+        "\n",
+        "# avoid AttributeError: 'builtin_function_or_method' object has no attribute 'rfftn'\n",
+        "!sed -E -i \"15i import torch.fft\" /content/lama/saicinpainting/training/modules/ffc.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "07hg4xM8tYCV"
+      },
+      "source": [
+        "## install libraries"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gRHm5XmrGGNB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gRHm5XmrGGNB",
+        "outputId": "f0cff39c-6285-4b6a-c94b-146c26f92f1d"
       },
       "outputs": [],
       "source": [
@@ -61,54 +82,19 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "b4v9kzPhRCRM"
-      },
-      "outputs": [],
-      "source": [
-        "# avoid AttributeError: 'builtin_function_or_method' object has no attribute 'rfftn'\n",
-        "!sed -E -i \"15i import torch.fft\" /content/lama/saicinpainting/training/modules/ffc.py"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "k6PtAhDL8qep"
-      },
-      "source": [
-        "## 学習済みモデルのセットアップ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2-tzc7Qu8n7P"
-      },
-      "outputs": [],
-      "source": [
-        "% cd /content/lama\n",
-        "\n",
-        "!curl -L $(yadisk-direct https://disk.yandex.ru/d/ouP6l8VJ0HpMZg) -o big-lama.zip\n",
-        "!unzip big-lama.zip"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "L6sssZcc9CBF"
       },
       "source": [
-        "## ライブラリをインポート"
+        "## import libraries"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "oeUH114h9AEa"
+        "id": "34QEYM0rp56Q"
       },
       "outputs": [],
       "source": [
@@ -126,18 +112,42 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Bhuq22_19Jrq"
+        "id": "2HpxxwFGYPo_"
       },
       "source": [
-        "# Canvasのセットアップ"
+        "# Setup pretrained models"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "QzkHB8lt9LdF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dLrvHPVpYR14",
+        "outputId": "8556fe31-65ff-456a-8172-e6ad8c9b167c"
       },
+      "outputs": [],
+      "source": [
+        "% cd /content/lama\n",
+        "\n",
+        "!curl -L $(yadisk-direct https://disk.yandex.ru/d/ouP6l8VJ0HpMZg) -o big-lama.zip\n",
+        "!unzip big-lama.zip"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Setup canvas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "\n",
@@ -215,9 +225,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "aHFN4noq9O3R"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "def draw(imgm, filename='drawing.png', w=400, h=200, line_width=1):\n",
@@ -229,12 +237,11 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {
-        "id": "rOTjBUyc9ZJo"
-      },
+      "metadata": {},
       "source": [
-        "# 画像のセットアップ\n",
+        "# Setup image\n",
         "[使用画像1](https://www.pakutaso.com/shared/img/thumb/PAK85_oyakudachisimasu20140830_TP_V.jpg)<br>\n",
         "[使用画像2](https://www.pakutaso.com/shared/img/thumb/TSU88_awaitoykyo_TP_V.jpg)<br>\n",
         "[使用画像3](https://www.pakutaso.com/20211208341post-37933.html)"
@@ -243,9 +250,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "QlrcDFJw9do9"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "% cd /content/lama\n",
@@ -269,20 +274,17 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {
-        "id": "5QIX0xGL94OX"
-      },
+      "metadata": {},
       "source": [
-        "# inpainting"
+        "# Inpainting"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "XGVWdNFi91qr"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "mask_path = f\".{fname.split('.')[1]}_mask.png\"\n",
@@ -296,9 +298,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "BTQhOHzJ9LOD"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "splitpaths = os.path.splitext(os.path.basename(fname))\n",
@@ -308,9 +308,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "KbA2rXYaDIQp"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "%cd /content/lama\n",
@@ -339,11 +337,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.4 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "69158ccfe43d0b962045f592ede11796dd42f250837ab62152c8bc6cd100a15b"
+      }
     }
   },
   "nbformat": 4,
