Add Google Colab demo

--- a/StableDiffusion_demo.ipynb
+++ b/StableDiffusion_demo.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9NENcrgDJv9q"
@@ -16,6 +17,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LHqYjlJ4Jv9u"
@@ -25,6 +27,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "z7jySK7RJv9v"
@@ -49,6 +52,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aaAzHlBvJv9y"
@@ -75,6 +79,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4tp-fduPJv9z"
@@ -97,10 +102,11 @@
       "source": [
         "%cd /content\n",
         "\n",
-        "!pip install diffusers==0.2.4 transformers scipy ftfy"
+        "!pip install diffusers transformers scipy ftfy accelerate"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Ka3Dh7n9Jv92"
@@ -127,6 +133,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "VIWoFf9MJv91"
@@ -149,6 +156,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "oXHSS39xerih"
@@ -169,6 +177,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QcBr2i_Hjyvv"
@@ -204,7 +213,7 @@
         "\n",
         "for i in range(num):\n",
         "  # モデルにpromptを入力し画像生成\n",
-        "  image = model(prompt)[\"sample\"][0]\n",
+        "  image = model(prompt)[0][0]\n",
         "  # 保存\n",
         "  image.save(f\"outputs/test_{i:04}.png\")"
       ]
