Add Google Colab demo

--- a/QRCode_AIArt_Generator_demo.ipynb
+++ b/QRCode_AIArt_Generator_demo.ipynb
@@ -49,7 +49,7 @@
         "# @markdown random seed\n",
         "seed = 12 #@param {type:\"integer\"}\n",
         "# @markdown text prompt\n",
-        "text_prompt = 'beautiful baby cute seahourse under the sea' #@param {type:\"string\"}\n",
+        "text_prompt = 'Sky view of highly aesthetic, ancient greek thermal baths  in beautiful nature' #@param {type:\"string\"}\n",
         "# @markdown image size\n",
         "img_size = 768 #@param {type:\"integer\"}\n",
         "# @markdown output path\n",
@@ -101,7 +101,7 @@
         "import torch\n",
         "from PIL import Image\n",
         "import matplotlib.pyplot as plt\n",
-        "from diffusers import StableDiffusionControlNetImg2ImgPipeline, ControlNetModel, DDIMScheduler\n",
+        "from diffusers import StableDiffusionControlNetImg2ImgPipeline, ControlNetModel, DDIMScheduler, DPMSolverMultistepScheduler\n",
         "from diffusers.utils import load_image\n",
         "\n",
         "import qrcode\n",
@@ -137,7 +137,8 @@
         ")\n",
         "\n",
         "pipe.enable_xformers_memory_efficient_attention()\n",
-        "pipe.scheduler = DDIMScheduler.from_config(pipe.scheduler.config)\n",
+        "# pipe.scheduler = DDIMScheduler.from_config(pipe.scheduler.config)\n",
+        "pipe.scheduler = DPMSolverMultistepScheduler.from_config(pipe.scheduler.config, use_karras=True, algorithm_type=\"sde-dpmsolver++\")\n",
         "pipe.enable_model_cpu_offload()"
       ],
       "metadata": {
@@ -328,7 +329,7 @@
         "    guidance_scale                    = 7.5,\n",
         "    controlnet_conditioning_scale     = 1.5,\n",
         "    generator                         = generator,\n",
-        "    strength                          = 0.90,\n",
+        "    strength                          = 0.9,\n",
         "    num_inference_steps               = 50\n",
         "    )"
       ],
